--- a/README
+++ b/README
@@ -20,6 +20,7 @@ $ zypper in qt-mobility-devel
 $ zypper in libqtopengl-devel
 $ zypper in libcontentaction-devel
 $ zypper in contextkit-devel
+$ zypper in mlite
 
 // then build the project:
 $ qmake
