--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-meego-ux-components ReadMe
+meego-ux-components Readme
 =================================================================
 This version was tested on:
 - meego-tablet-ia32-pinetrail-1.1.90.7.20110308.6.iso
