--- a/README
+++ b/README
@@ -114,7 +114,7 @@ Basic widgets:
 
 Modal dialogs:
 - DatePicker
-- ModalContextMenu
+- ContextMenu
 - ModalMessageBox
 - MusicPicker
 - PhotoPicker
