Renamed MediaGridView to MucMediaGridView to avoid confusions with meego-ux-media when using the imports.

--- a/README
+++ b/README
@@ -135,7 +135,7 @@ Modal dialogs:
 - VideoPicker
 
 Basic components:
-- MediaGridView
+- MucMediaGridView
 - ScrollableMusicList
 - ModalDialog
 - ModalFog
