--- a/README
+++ b/README
@@ -1,33 +1,36 @@
+MeeGo Ux Components
+===================
 
-meego-ux-components Readme
-=================================================================
+1. Building and installing
+==========================
 
-You can install the meego-ux-components via zypper:
- sudo zypper install meego-ux-components
- sudo zypper install meego-ux-components-devel
+You can install the meego-ux-components via zypper (use zypper as root):
 
-or build them yourself:
+ $ zypper install meego-ux-components
+ $ zypper install meego-ux-components-devel
 
-// necessary additional libraries:
-$ zypper in contextkit-devel
-$ zypper in kcalcore-devel
-$ zypper in libX11-devel
-$ zypper in libXcomposite-devel
-$ zypper in libXdamage-devel
-$ zypper in libcontentaction-devel
-$ zypper in libexif-devel
-$ zypper in libqtopengl-devel
-$ zypper in mlite-devel
-$ zypper in pulseaudio-devel
-$ zypper in qt-devel-tools
-$ zypper in qt-mobility-devel
+Or build yourself by installing the dependencies:
 
-// then build the project:
-$ qmake
-$ make install
+ $ zypper in contextkit-devel
+ $ zypper in libexif-devel
+ $ zypper in libqt-devel
+ $ zypper in libX11-devel
+ $ zypper in libXcomposite-devel
+ $ zypper in libXdamage-devel
+ $ zypper in mlite-devel
+ $ zypper in pkgconfig
+ $ zypper in pulseaudio-devel
 
-You can find detailed documentation in the qml-files themselves, create
-documentation files via qdoc3 (see on bottom) or "make doc".
+And then you can compile and install:
+
+ $ qmake
+ $ make install (or only "make" to compile)
+
+You can generate the documentation by doing:
+
+ $ zypper in qt-devel-tools (installs qdoc3)
+ $ qmake
+ $ make doc
 
 - Examples for meego-ux-components -
 ===============================
